bug:remove Overflow-x [Finishes #168363992]

--- a/UI/css/deleteArticle.css
+++ b/UI/css/deleteArticle.css
@@ -199,7 +199,7 @@ footer{
       margin-left:30px; 
       margin-top: 50px;
       padding: 20px;
-      overflow-x: scroll;
+      /* overflow-x: scroll; */
    }
 
    #sidebar {
