--- a/UI/css/editArticle.css
+++ b/UI/css/editArticle.css
@@ -198,7 +198,7 @@ footer{
       margin-left:30px; 
       margin-top: 50px;
       padding: 20px;
-      overflow-x: scroll;
+      /* overflow-x: scroll; */
    }
 
    #sidebar {
